--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "raptor-static-site-generator",
   "version": "0.2.0",
   "description": "Node module to support generating static websites using the power of RaptorJS",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
